# botcore

./: .gitignore  README.md  pyproject.toml
src/botcore/: __init__.py
src/botcore/aws/: __init__.py  email.py  secrets.py
src/botcore/lore/: __init__.py  image_guidance.py  series_context.py
src/botcore/metrics/: __init__.py  maturity.py
src/botcore/time/: __init__.py  windows.py
tests/: test_maturity.py  test_windows.py
