[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botcore"
version = "0.1.0"
description = "Shared primitives for sjmorris bot repos"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

